customizing and adding our info

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,24 +5,19 @@ color: black
 style: center
 ---
 
-### *whoa, hey an open-source*
-{: .text-purple}
+# OwnPush
+{: .text-green}
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
+### *Next generation, open-source push services*
+{: .text-black}
+
+<span class="fa-stack subtlecircle" style="font-size:100px;">
   <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
+  <i class="fa fa-comments fa-stack-1x text-green"></i>
 </span>
-
-# single-page jekyll theme
-{: .text-purple}
-
-
-…it's focused on delivering information quickly, easily, configurably, and stylishly!
-
-Want to make a single-page site to show off something cool? Go [fork me on github!](https://github.com/t413/SinglePaged)
 
 <span id="forkongithub">
   <a href="{{ site.source_link }}" class="bg-blue">
-    Fork me on GitHub
+    View on GitHub
   </a>
 </span>
