--- a/_posts/2000-01-02-why.md
+++ b/_posts/2000-01-02-why.md
@@ -1,30 +1,9 @@
 ---
 title: "Why"
-bg: blue
+bg: black
 color: white
 fa-icon: check-square-o
 ---
 
-#### Basically
-
-# this theme rocks.
-
-Got some *killer app*, some *neat project*, a cool portfolio? Make an easy single-page site to show it all off. SinglePaged uses jekyll niceties to make a ***polished, modular, and beautiful* single page site**.
-
-Oh-- go see [some examples](https://github.com/t413/SinglePaged#fancy-jekyll-powered-single-page-site)!
-
-- Each vertical section is a markdown file in **_posts/** directory.
-  * They're sorted by 'date'. (we don't use date anywhere, it only sorts)
-- Each vertical section sets it's own **color**, **header icon** (or image), **title**, and easy-to-write markdown body.
-- Only **two things** to edit:
-  1. Edit `_config.yml` to set the site title, description, etc
-  2. Add `_posts/*.md` to make each vertical section. Copy some examples and add the sections from your README.md for a fast start!
-- Easy adding of **SEO terms**, **favicon** & such, and **google analytics token**.
-
-Sound good? Let's go!
-
-There are three way to get started: (links jump to that section)
-
-1. Make a [**user homepage**](#setup-as-user-homepage) (or organization)
-2. Make a [**standalone project**](#setup-as-standalone-project-page) page
-3. Make a [site under an **existing project**](#setup-inside-existing-project)
+## Push messages are a key tool
+<div align="center">Developers know that in order to keep their users engaged with their apps/services they need to use push messages. Until now there has been little choice outside of Google Cloud Messaging (GCM). With this lack of choice came a dependency on Google Services which is a known battery and resource drain on today’s modern devices. This dependency also has created a challenge for developers looking to provide the billion or more users who do not have access to Google Services, or choose to value privacy, with push notifications.</div>
